--- a/app/views/mypages/_no_reply.erb
+++ b/app/views/mypages/_no_reply.erb
@@ -2,7 +2,7 @@
     <div class="no_review_div">
         <%= image_tag "/assets/lion_sad.svg", class: "", alt: "professor" %><br>
         <p class="feed_head">
-            아직 작성한 댓글이 없어요!
+            아직 작성한 댓글이 없어요ㅠㅠ
         </p>
         <!--<p class="feed_head2">-->
         <!--    지금 강의평가를 작성하고 ~개의 강의평가를 확인해봐염-->
