--- a/app/views/mypages/_no_review.html.erb
+++ b/app/views/mypages/_no_review.html.erb
@@ -2,10 +2,10 @@
     <div class="no_review_div">
         <%= image_tag "/assets/lion_sad.svg", class: "", alt: "professor" %><br>
         <p class="feed_head">
-            아직 작성한 강의평가가 없어요!
+            아직 작성한 강의평가가 없어요ㅠㅠ
         </p>
         <p class="feed_head2">
-            지금 강의평가를 작성하고 5012개의 강의평가를 확인해보세요
+            지금 강의평가를 작성하시고 포인트를 받아보세요!
         </p>
         <div class="info_btn_div no_review_btn">
           <button class="info_btn">
