--- a/app/views/evaluations/recent.erb
+++ b/app/views/evaluations/recent.erb
@@ -5,7 +5,7 @@
       <div class="col-xs-12 col-sm-12 feed_each_div">
         <div class="col-xs-12">
           <p class="feed_course">
-            <%= image_tag "/assets/thumbs_up.svg", class: "", alt: "thumbs_up"%>
+            <%= image_tag "/assets/thumbs_down.svg", class: "", alt: "thumbs_up"%>
             <a href='/courses/<%= e.course.id %>'>
               <%= e.course.lecture.name %>(<%= e.course.professor.name %> 교수)
             </a>
@@ -19,7 +19,7 @@
         <div class="feed_etc col-xs-12">
           <p class="feed_etc_left">
             <%= e.time_ago %>
-            ·
+            &nbsp;·&nbsp;
             <%= link_to (image_tag "siren.svg"), reports_path,  {remote: true, 'data-toggle' =>  "modal", 'data-target' => '#myModal'}  %>
           </p>
           <p class="feed_etc_right">
@@ -35,25 +35,31 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
+          <p class="modal-title">신고하기</p>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
         </div>
         <div class="modal-body">
           <%= form_for Report.new do |f| %>
               <%= f.hidden_field :evaluation_id, value: e.id %>
-              <%= f.text_field :body %>
-              <%= f.submit "send" %>
+              <%#= f.text_field :body %>
+              <%= f.text_area :body, placeholder: (t "report.placeholder" ), rows: 8, class: "write_comment_box report_box" %>
+              <%= f.submit (t "report.submit_button"), class: "review_write_btn report_write_btn" %>
+              <%#= f.submit "send" %>
           <% end %>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+        <!--<div class="modal-footer">-->
+        <!--  <p>-->
+        <!--    신고하신 내용은 확인, 수정, 삭제가 불가능합니다. 운영자가 검토할게요~ -->
+        <!--  </p>-->
+          <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+        <!--</div>-->
       </div>
     </div>
   </div>
   <%# report modal form end %>
   <% since_id = e.id %>
 <% end %>
+
 <% if @evaluations.count > 0 %>
 <a href="/recent_evaluations?since=<%= since_id %>" class="next_content"></a>
 <% end %>
