report modal FE

--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -6,7 +6,7 @@
             <%= image_tag "/assets/lion_1.svg", class: "my_page_lion", alt: "lion"%><br>
             <p class="my_page_name">
               <%= @current_user.nickname %>
-            <a href="/mypage">
+            <a href="/info">
             <i class="fa fa-cog" aria-hidden="true"></i>
             </a>
             </p>
