--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -1,119 +1,127 @@
 <div class="container-fluid">
     <% @evaluations.each_with_index do |e|  %>
+      <% if e.like.is_like %>
         <div class="feed_each">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 feed_each_div">
-              <div class="col-xs-12">
-                <p class="feed_course">
+      <% else %>
+        <div class="feed_each feed_each_dislike">
+      <% end %>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 feed_each_div">
+            <div class="col-xs-12">
+              <p class="feed_course">
+                <% if e.like.is_like %>
                   <%= image_tag "/assets/thumbs_up.svg", class: "", alt: "thumbs_up"%>
-                  <a href='/courses/<%= e.course.id %>'>
-                    <%= e.course.lecture.name %>(<%= e.course.professor.name %> 교수)
-                  </a>
-                </p>
-              </div>
-  
-              <p class="feed_content col-xs-12">
-                <%= e.body.gsub(/(?:\n\r?|\r\n?)/, '<br>').html_safe %></p>
-              </p>
-              
-              <div class="feed_etc col-xs-12">
-                <p class="feed_etc_left">
-                  <%= e.time_ago %>
-                  &nbsp;·&nbsp;
-    
-                  <%= image_tag "reply.svg", alt: "reply", id: "#{e.id}", class: "reply_count reply_btn" %>
-                  <span id="comment_count<%=e.id%>" class="reply_count"><%= e.comments.count %></span>
-                  &nbsp;·&nbsp;
-  
-                  <%= link_to (image_tag "siren.svg"), reports_path,  {remote: true, 'data-toggle' =>  "modal", 'data-target' => '#myModal'}  %>
-
-                  <%# 만약 글쓴이라면! %>
-                  &nbsp;·&nbsp;
-                  
-                  <a href="#"><i class="fa fa-pencil-square-o writer_icon" aria-hidden="true"></i></a>
-                  &nbsp;·&nbsp;
-                  <i class="fa fa-trash-o writer_icon" aria-hidden="true"></i>
-                  <%# end %>
-                </p>
-                <p class="feed_etc_right">
-                  <span>작성자</span> <%= e.user.nickname %>
-                </p>
-                <br>
-              </div>
-
-              <%# 댓글 달때 빵빵 달리는 부분%>
-              <div class="col-xs-12 reply_list_wrap" id="reply_list_wrap<%=e.id%>" style="display: none;">
-                <div class="reply_div col-xs-12">
-                  <div class="reply_right col-xs-12" id="reply_list<%=e.id%>">
-                    <% e.comments.each do |c| %>
-                        <div class="bubble_content" id="reply_list_child<%=c.id%>">
-                          <%= c.user.nickname %>
-                          <span class="bubble_top_right">
-                        <%= c.time_ago %>
-                            <% if c.user == @current_user %>
-                          &nbsp;·&nbsp;
-                                <%# 수정 - 구현해야함 %>
-                                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                          &nbsp;·&nbsp;
-                                <%# 삭제 %>
-                                <%= link_to comment_path(c), remote: true, method: :delete do %>
-                              <i class="fa fa-trash-o" aria-hidden="true"></i>
-                          <% end %>
-                        <% end %>
-                        </span>
-                          <br>
-                          <p>
-                            <%= c.body %><br>
-                          </p>
-                        </div>
-                    <% end %>
-                  </div>
-                </div>
-                <div class="reply_div col-xs-12">
-                  <div class="bubble_list">
-                    <div class="bubble clearfix"></div>
-                  </div>
-                  <div class="reply_right col-xs-12">
-                    <%= form_for(Comment.new, url: evaluation_comments_path(evaluation_id: e.id ), remote: true) do |f| %>
-                        <%= f.text_area :body, id: "comment_body#{e.id}" ,placeholder: (t "comment.placeholder"), rows: 3, class: "bubble_content bubble_write reply_box", autocomplete: "off" %>
-                        <div class="bubble_content reply_btn_div bubble_btn">
-                          <%= f.submit "작성하기", class: "reply_write_btn" %>
-                        </div>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-        <%# report modal form begin %>
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <p class="modal-title">신고하기</p>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-              </div>
-              <div class="modal-body">
-                <%= form_for Report.new do |f| %>
-                    <%= f.hidden_field :evaluation_id, value: e.id %>
-                    <%#= f.text_field :body %>
-                    <%= f.text_area :body, placeholder: (t "report.placeholder" ), rows: 8, class: "write_comment_box report_box" %>
-                    <%= f.submit (t "report.submit_button"), class: "review_write_btn report_write_btn" %>
-                    <%#= f.submit "send" %>
+                <% else %>
+                  <%= image_tag "/assets/thumbs_down.svg", class: "", alt: "thumbs_down"%>
                 <% end %>
+                <a href='/courses/<%= e.course.id %>'>
+                  <%= e.course.lecture.name %>(<%= e.course.professor.name %> 교수)
+                </a>
+              </p>
+            </div>
+
+            <p class="feed_content col-xs-12">
+              <%= e.body.gsub(/(?:\n\r?|\r\n?)/, '<br>').html_safe %></p>
+            </p>
+            
+            <div class="feed_etc col-xs-12">
+              <p class="feed_etc_left">
+                <%= e.time_ago %>
+                &nbsp;·&nbsp;
+  
+                <%= image_tag "reply.svg", alt: "reply", id: "#{e.id}", class: "reply_count reply_btn" %>
+                <span id="comment_count<%=e.id%>" class="reply_count"><%= e.comments.count %></span>
+                &nbsp;·&nbsp;
+
+                <%= link_to (image_tag "siren.svg"), reports_path,  {remote: true, 'data-toggle' =>  "modal", 'data-target' => '#myModal'}  %>
+
+                <%# 만약 글쓴이라면! %>
+                &nbsp;·&nbsp;
+                
+                <a href="#"><i class="fa fa-pencil-square-o writer_icon" aria-hidden="true"></i></a>
+                &nbsp;·&nbsp;
+                <i class="fa fa-trash-o writer_icon" aria-hidden="true"></i>
+                <%# end %>
+              </p>
+              <p class="feed_etc_right">
+                <span>작성자</span> <%= e.user.nickname %>
+              </p>
+              <br>
+            </div>
+
+            <%# 댓글 달때 빵빵 달리는 부분%>
+            <div class="col-xs-12 reply_list_wrap" id="reply_list_wrap<%=e.id%>" style="display: none;">
+              <div class="reply_div col-xs-12">
+                <div class="reply_right col-xs-12" id="reply_list<%=e.id%>">
+                  <% e.comments.each do |c| %>
+                      <div class="bubble_content" id="reply_list_child<%=c.id%>">
+                        <%= c.user.nickname %>
+                        <span class="bubble_top_right">
+                      <%= c.time_ago %>
+                          <% if c.user == @current_user %>
+                        &nbsp;·&nbsp;
+                              <%# 수정 - 구현해야함 %>
+                              <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                        &nbsp;·&nbsp;
+                              <%# 삭제 %>
+                              <%= link_to comment_path(c), remote: true, method: :delete do %>
+                            <i class="fa fa-trash-o" aria-hidden="true"></i>
+                        <% end %>
+                      <% end %>
+                      </span>
+                        <br>
+                        <p>
+                          <%= c.body %><br>
+                        </p>
+                      </div>
+                  <% end %>
+                </div>
               </div>
-              <!--<div class="modal-footer">-->
-              <!--  <p>-->
-              <!--    신고하신 내용은 확인, 수정, 삭제가 불가능합니다. 운영자가 검토할게요~ -->
-              <!--  </p>-->
-                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-              <!--</div>-->
+              <div class="reply_div col-xs-12">
+                <div class="bubble_list">
+                  <div class="bubble clearfix"></div>
+                </div>
+                <div class="reply_right col-xs-12">
+                  <%= form_for(Comment.new, url: evaluation_comments_path(evaluation_id: e.id ), remote: true) do |f| %>
+                      <%= f.text_area :body, id: "comment_body#{e.id}" ,placeholder: (t "comment.placeholder"), rows: 3, class: "bubble_content bubble_write reply_box", autocomplete: "off" %>
+                      <div class="bubble_content reply_btn_div bubble_btn">
+                        <%= f.submit "작성하기", class: "reply_write_btn" %>
+                      </div>
+                  <% end %>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <%# report modal form end %>
+      </div>
+      
+      <%# report modal form begin %>
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <p class="modal-title">신고하기</p>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <%= form_for Report.new do |f| %>
+                  <%= f.hidden_field :evaluation_id, value: e.id %>
+                  <%#= f.text_field :body %>
+                  <%= f.text_area :body, placeholder: (t "report.placeholder" ), rows: 8, class: "write_comment_box report_box" %>
+                  <%= f.submit (t "report.submit_button"), class: "review_write_btn report_write_btn" %>
+                  <%#= f.submit "send" %>
+              <% end %>
+            </div>
+            <!--<div class="modal-footer">-->
+            <!--  <p>-->
+            <!--    신고하신 내용은 확인, 수정, 삭제가 불가능합니다. 운영자가 검토할게요~ -->
+            <!--  </p>-->
+              <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+            <!--</div>-->
+          </div>
+        </div>
+      </div>
+      <%# report modal form end %>
     <% end %>
 </div>
 
