--- a/app/views/wikis/history.erb
+++ b/app/views/wikis/history.erb
@@ -1,69 +1,160 @@
-<div style="margin-top:200px;">
-  <% if @wiki_history.size > 1 %>
-  <a href="#" id="diff_revisions">리비전 비교하기</a>
-  <% end %>
-  <% @wiki_history.each do |w| %>
-    <p>
-    <a href="/wiki/<%= w.course_id %>/show/<%= w.revision %>">보기</a>
-    |
-    <a href="/wiki/<%= w.course_id %>/rollback/<%= w.revision %>">이 리비전으로 돌리기</a>
-    |
-    <a href="/wiki/<%= w.course_id %>/diff/<%= w.revision%>/<%= w.course.recent_wiki.revision %>">바뀐점</a>
-    |
-    <%= w.revision %>
-    <% if @wiki_history.size > 1 %>
-    <input type="radio" class="revision_left" id="revision_left_<%= w.revision %>" name="left" value="<%= w.revision %>">
-    <input type="radio" class="revision_right" id="revision_right_<%= w.revision %>" name="right" value="<%= w.revision %>">
-    <% end %>
-    //
-    <%= w.created_at %>
-    //
-    <%= w.user.nickname %>
-    //
-    <%= w.comment %>
-    <% if w.rollback >= 0 %>
-    //
-    <span style="font-weight:bold">Roll back from <%= w.rollback%><span>
-    <% end %>
-    </p>
-  <% end %>
+<div class="index_container course_show_index">
+  <div class="container-fluid">
+    <div class="course_top wiki_top">
+      <div class="course_info_div">
+        <div>
+          <span class="info_course">
+            <%= @course.lecture.name %>
+            <% if @course.is_major == true %>
+              <span class="info_prof wiki_prof">
+                <span class="lec_cate">전공</span><%= @course.professor.name %> 교수
+              </span>
+            <% else %>
+              <span class="info_prof wiki_prof">
+                <span class="lec_cate">교양</span><%= @course.professor.name %> 교수
+              </span>
+            <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container-fluid">  
+    <div class="tab_div">
+      <div class="tab_menu wiki_tab_menu">
+      <ul class="tab">
+        <li>
+          <a href="javascript:void(0)" class="wiki_tab tablinks" onclick="openTab(event, 'wiki_history');" id="defaultOpen">
+            히스토리
+          </a>
+        </li>
+        <!--<li>-->
+        <!--  <a href="javascript:void(0)" class="review_tab tablinks" onclick="openTab(event, 'compare');">-->
+        <!--    수정비교-->
+        <!--  </a>-->
+        <!--</li>-->
+        <li class="filter tab_move">
+          <a href="/courses/<%= @course.id %>">
+            최신판/편집하기 <i class="fa fa-angle-right" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+      </div>
+
+      <div id="wiki_history" class="tabcontent">
+        <div>
+          <% if @wiki_history.size > 1 %>
+          <a href="#" id="diff_revisions">리비전 비교하기</a>
+          <% end %>
+          <% @wiki_history.each do |w| %>
+            <p>
+            <a href="/wiki/<%= w.course_id %>/show/<%= w.revision %>">보기</a>
+            |
+            <a href="/wiki/<%= w.course_id %>/rollback/<%= w.revision %>">이 리비전으로 돌리기</a>
+            |
+            <a href="/wiki/<%= w.course_id %>/diff/<%= w.revision%>/<%= w.course.recent_wiki.revision %>">바뀐점</a>
+            |
+            <%= w.revision %>
+            <% if @wiki_history.size > 1 %>
+            <input type="radio" class="revision_left" id="revision_left_<%= w.revision %>" name="left" value="<%= w.revision %>">
+            <input type="radio" class="revision_right" id="revision_right_<%= w.revision %>" name="right" value="<%= w.revision %>">
+            <% end %>
+            //
+            <%= w.created_at %>
+            //
+            <%= w.user.nickname %>
+            //
+            <%= w.comment %>
+            <% if w.rollback >= 0 %>
+            //
+            <span style="font-weight:bold">Roll back from <%= w.rollback%><span>
+            <% end %>
+            </p>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
 <script>
-$(function(){
-  <% if @wiki_history.size > 1 %>
-  $("#diff_revisions").on("click touchstart", function(){
-    window.location.replace("/wiki/<%= params[:id] %>/diff/" + $("input[name='left']:checked").val() + "/" + $("input[name='right']:checked").val());
-  });
-  function left_flush(left_number){
-    $(".revision_left").each(function() {
-      if(parseInt($(this).val()) >= left_number){
-        $(this).css("visibility", "hidden");
-      }else{
-        $(this).css("visibility", "visible");
-      }
-    });
-  }
-  function right_flush(right_number){
-    $(".revision_right").each(function() {
-      if(parseInt($(this).val()) <= right_number){
-        $(this).css("visibility", "hidden");
-      }else{
-        $(this).css("visibility", "visible");
-      }
-    });
-  }
-  $(".revision_right").on("click touchstart", function(){
-    left_flush(parseInt($(this).val()));
-  });
-  $(".revision_left").on("click touchstart", function(){
-    right_flush(parseInt($(this).val()));
-  });
 
-  $("#revision_left_" + <%= @wiki_history.first.revision - 1 %>).attr('checked', 'checked');
-  $("#revision_right_" + <%= @wiki_history.first.revision %>).attr('checked', 'checked');
+  function hideTarget(target) {
+    tar = document.getElementById(target);
+    tar.className += " hide";
+  }
+  
+  function showTarget(target) {
+    tar = document.getElementById(target)
+    tar.className = tar.className.replace(" hide", "");
+  }
+  
+  //tab start//
+  function openTab(evt, cityName) {
+    // Declare all variables
+    var i, tabcontent, tablinks;
 
-  left_flush(<%= @wiki_history.first.revision %>);
-  right_flush(<%= @wiki_history.first.revision - 1 %>);
-  <% end %>
-});
+    // Get all elements with class="tabcontent" and hide them
+    tabcontent = document.getElementsByClassName("tabcontent");
+    
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+
+    // Get all elements with class="tablinks" and remove the class "active"
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" active", "");
+      tablinks[i].parentNode.className = tablinks[i].parentNode.className.replace(" active_li", "");
+    }
+
+    // Show the current tab, and add an "active" class to the link that opened the tab
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+    evt.currentTarget.parentNode.className += " active_li";
+  }
+  //change tab img end//
+
+  // Get the element with id="defaultOpen" and click on it
+  document.getElementById("defaultOpen").click();
+  //tab end//
+
+  $(function(){
+    <% if @wiki_history.size > 1 %>
+    $("#diff_revisions").on("click touchstart", function(){
+      window.location.replace("/wiki/<%= params[:id] %>/diff/" + $("input[name='left']:checked").val() + "/" + $("input[name='right']:checked").val());
+    });
+    function left_flush(left_number){
+      $(".revision_left").each(function() {
+        if(parseInt($(this).val()) >= left_number){
+          $(this).css("visibility", "hidden");
+        }else{
+          $(this).css("visibility", "visible");
+        }
+      });
+    }
+    function right_flush(right_number){
+      $(".revision_right").each(function() {
+        if(parseInt($(this).val()) <= right_number){
+          $(this).css("visibility", "hidden");
+        }else{
+          $(this).css("visibility", "visible");
+        }
+      });
+    }
+    $(".revision_right").on("click touchstart", function(){
+      left_flush(parseInt($(this).val()));
+    });
+    $(".revision_left").on("click touchstart", function(){
+      right_flush(parseInt($(this).val()));
+    });
+  
+    $("#revision_left_" + <%= @wiki_history.first.revision - 1 %>).attr('checked', 'checked');
+    $("#revision_right_" + <%= @wiki_history.first.revision %>).attr('checked', 'checked');
+  
+    left_flush(<%= @wiki_history.first.revision %>);
+    right_flush(<%= @wiki_history.first.revision - 1 %>);
+    <% end %>
+  });
 </script>
