--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,7 +23,7 @@
                 <% end %>
               <% end %>
             </span>
-            <br>
+            <!--<br>-->
             <% if @course.is_major == true %>
               <span class="info_prof">
                 <span class="lec_cate">전공</span><%= @course.professor.name %> 교수
@@ -106,7 +106,12 @@
             강의평가
           </a>
         </li>
-        <li id= "filter" class="filter">
+        <li id="history" class="filter tab_move">
+          <a href="/wiki/<%= @course.id %>/history">
+            history <i class="fa fa-angle-right" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li id="filter" class="filter">
           <%# partial refresh needed %>
           <%= form_tag do %>
               <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
@@ -192,14 +197,14 @@
     });
   });
 
-  function hideFilter() {
-    filter = document.getElementById("filter");
-    filter.className += " hide";
+  function hideTarget(target) {
+    tar = document.getElementById(target);
+    tar.className += " hide";
   }
   
-  function showFilter() {
-    filter = document.getElementById("filter");
-    filter.className = filter.className.replace(" hide", "");
+  function showTarget(target) {
+    tar = document.getElementById(target)
+    tar.className = tar.className.replace(" hide", "");
   }
   
   //tab start//
@@ -237,11 +242,13 @@
 
     if (evt.currentTarget.className.match('review_tab')) {
       evt.currentTarget.children[0].src = review_on;
-      showFilter();
+      showTarget("filter");
+      hideTarget("history");
     }
     else {
       evt.currentTarget.children[0].src = wiki_on;
-      hideFilter();
+      hideTarget("filter");
+      showTarget("history");
     };
   }
   //change tab img end//
