--- a/app/views/account_activations/not_activated.erb
+++ b/app/views/account_activations/not_activated.erb
@@ -24,14 +24,14 @@
 
 <script>
   <%# 로고 숨기고 로고만큼 넓이 맞추기 위한 jquery %>
-  function setWidth() {
+  function setwidth() {
     var fit_logo = $(".fit_logo");
     var fit_div = $(".fit_div");
-    var fitWidth = fit_div.outerWidth();
-    fit_div.css({ width: fitWidth });
+    var fitwidth = fit_div.outerwidth();
+    fit_div.css({ width: fitwidth });
     fit_logo.css({ display: "none" });
   }
 
-  setWidth();
+  setwidth();
 
 </script>
