--- a/app/views/courses/_like_form.html.erb
+++ b/app/views/courses/_like_form.html.erb
@@ -11,11 +11,11 @@
 
   <%# 좋아요가 눌린 경우 %>
   <% elsif (Like.find_by(course_id: @course.id, user_id: @current_user.id)).is_like == true %>
-      <%= button_tag class: 'like_btn', id: 'like_delete_btn' do %>
+    <%= button_tag class: 'like_btn', id: 'like_delete_btn' do %>
         <img src="/assets/thumbs_up_ox.svg">
         <%= t "like_form.like" %>
-        <i class="fa fa-heart not_favorite" aria-hidden="true"></i>
-      <% end %>
+        <i class="fa fa-heart favorite" aria-hidden="true"></i>
+    <% end %>
 
   <%# 싫어요가 눌린 경우 %>
   <% else %>
@@ -56,8 +56,17 @@
 <% end %>
 
 <script>
-  <%# 좋아요 생성 %>
+    <%# 좋아요 생성 %>
   $(document).on("click","#like_create_btn",function() {
+
+    var $target = $('#new_evaluation');
+
+    function slide() {
+      $target.slideToggle(500, function () {
+        $target.is(':visible') ? 'Hide' : 'Show';
+      });
+    }
+
     var course_id = $('#c_id').val();
     var boolean = $('#boolean').val();
     $.ajax({
@@ -79,9 +88,20 @@
         }
       }
     });
+
+    slide();
   });
   <%# 좋아요 취소 %>
   $(document).on("click","#like_delete_btn",function() {
+
+    var $target = $('#new_evaluation');
+
+    function slide() {
+      $target.slideToggle(500, function () {
+        $target.is(':visible') ? 'Hide' : 'Show';
+      });
+    }
+
     var course_id = $('#c_id').val();
     $.ajax({
       headers: {
@@ -102,6 +122,8 @@
         }
       }
     });
+
+    slide();
   });
 
   <%# 좋아요 생성하면서 싫어요 취소 %>
@@ -133,6 +155,15 @@
 
   <%# 싫어요 생성 %>
   $(document).on("click","#dislike_create_btn",function() {
+
+    var $target = $('#new_evaluation');
+
+    function slide() {
+      $target.slideToggle(500, function () {
+        $target.is(':visible') ? 'Hide' : 'Show';
+      });
+    }
+
     var course_id = $('#c_id').val();
     var boolean = $('#boolean').val();
     $.ajax({
@@ -154,10 +185,21 @@
         }
       }
     });
+
+    slide();
   });
 
   <%# 싫어요 취소 %>
   $(document).on("click","#dislike_delete_btn",function() {
+
+    var $target = $('#new_evaluation');
+
+    function slide() {
+      $target.slideToggle(500, function () {
+        $target.is(':visible') ? 'Hide' : 'Show';
+      });
+    }
+
     var course_id = $('#c_id').val();
     $.ajax({
       headers: {
@@ -178,6 +220,8 @@
         }
       }
     });
+
+    slide();
   });
 
   <%# 싫어요 생성하면서 좋아요 취소 %>
@@ -205,5 +249,4 @@
       }
     });
   });
-
 </script>
