--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -107,13 +107,10 @@
           </a>
         </li>
         <li id= "filter" class="filter">
-          <%# partial refresh needed %>
+          <%# TODO partial refresh needed %>
           <%= form_tag do %>
               <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
           <% end %>
-          <%#= form_tag do %>
-              <%#= select_tag 'order', options_for_select(['최신순','총점순','총점역순'], @params), onchange: "$('#order').submit();" %>
-          <%# end %>
         </li>
       </ul>
       </div>
@@ -127,9 +124,7 @@
             <%= (t "form.evaluated") %>
           <% else %>
             <%= render 'like_form' %>
-            <%# if Like.exists?(course_id: @course.id, user_id: @current_user.id) %>
-              <%= render 'form' %>
-            <%# end %>
+            <%= render 'form' %>
           <% end %>
           
         <% if @course.evaluations.count > 0 %>
