wiki history page - radio btn css

--- a/app/views/wikis/diff.erb
+++ b/app/views/wikis/diff.erb
@@ -30,7 +30,7 @@
         </li>
         <li class="filter tab_move">
           <a href="/wiki/<%= @course.id %>/history">
-            히스토리 <i class="fa fa-angle-right" aria-hidden="true"></i>
+            강의 페이지로 <i class="fa fa-angle-right" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
