--- a/app/views/wikis/history.erb
+++ b/app/views/wikis/history.erb
@@ -44,33 +44,41 @@
       <div id="wiki_history" class="tabcontent">
         <div>
           <% if @wiki_history.size > 1 %>
-          <a href="#" id="diff_revisions">리비전 비교하기</a>
+          <a href="#" id="diff_revisions">선택된 리비전 비교하기</a>
           <% end %>
+          <ul class="history_ul">
           <% @wiki_history.each do |w| %>
-            <p>
-            <a href="/wiki/<%= w.course_id %>/show/<%= w.revision %>">보기</a>
-            |
-            <a href="/wiki/<%= w.course_id %>/rollback/<%= w.revision %>">이 리비전으로 돌리기</a>
-            |
-            <a href="/wiki/<%= w.course_id %>/diff/<%= w.revision%>/<%= w.course.recent_wiki.revision %>">바뀐점</a>
-            |
-            <%= w.revision %>
-            <% if @wiki_history.size > 1 %>
-            <input type="radio" class="revision_left" id="revision_left_<%= w.revision %>" name="left" value="<%= w.revision %>">
-            <input type="radio" class="revision_right" id="revision_right_<%= w.revision %>" name="right" value="<%= w.revision %>">
-            <% end %>
-            //
-            <%= w.created_at %>
-            //
-            <%= w.user.nickname %>
-            //
-            <%= w.comment %>
-            <% if w.rollback >= 0 %>
-            //
-            <span style="font-weight:bold">Roll back from <%= w.rollback%><span>
-            <% end %>
-            </p>
+            <li class="history_list">
+              <%= w.created_at %>
+                            
+              <span class="history_go">              
+              (
+              <a href="/wiki/<%= w.course_id %>/show/<%= w.revision %>">보기</a>
+              |
+              <a href="/wiki/<%= w.course_id %>/rollback/<%= w.revision %>">이 리비전으로 돌리기</a>
+              |
+              <a href="/wiki/<%= w.course_id %>/diff/<%= w.revision%>/<%= w.course.recent_wiki.revision %>">바뀐점</a>
+              )
+              </span>
+  
+              <% if @wiki_history.size > 1 %>
+              <input type="radio" class="revision_left" id="revision_left_<%= w.revision %>" name="left" value="<%= w.revision %>">
+              <label for="revision_left_<%= w.revision %>" class="revision_label"></label>
+              
+              <input type="radio" class="revision_right" id="revision_right_<%= w.revision %>" name="right" value="<%= w.revision %>">
+              <label for="revision_right_<%= w.revision %>" class="revision_label"></label>
+              <% end %>
+           
+              <%= w.revision %>
+              (<%= w.user.nickname %>)
+              <%= w.comment %>
+              
+              <% if w.rollback >= 0 %>
+              <span>Roll back from <%= w.rollback%><span>
+              <% end %>
+            </li>
           <% end %>
+          </ul>
         </div>
       </div>
     </div>
