--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -104,7 +104,7 @@
         <li>
           <a href="javascript:void(0)" class="review_tab tablinks" onclick="openTab(event, 'review');">
             <%= image_tag "/assets/review_on.svg", class: "tab_img", alt: "review" %>
-            강의평가[<%= @evaluation_count %>]
+            강의평가
           </a>
         </li>
         <li id="history" class="filter tab_move">
